# gildongE/src/main/java/com/gildong/gildongE/model/User.java
@@ -12,7 +12,57 @@ import java.time.LocalDateTime;
 public class User {
     @Id
     private String id;
+    private String loginId;
+    private String password;
     private String userName;
     private float avgDrivingScore;
     private LocalDateTime createdAt;
+
+    public String getId() {
+        return id;
+    }
+
+    public void setId(String id) {
+        this.id = id;
+    }
+
+    public String getLoginId() {
+        return loginId;
+    }
+
+    public void setLoginId(String loginId) {
+        this.loginId = loginId;
+    }
+
+    public String getPassword() {
+        return password;
+    }
+
+    public void setPassword(String password) {
+        this.password = password;
+    }
+
+    public String getUserName() {
+        return userName;
+    }
+
+    public void setUserName(String userName) {
+        this.userName = userName;
+    }
+
+    public float getAvgDrivingScore() {
+        return avgDrivingScore;
+    }
+
+    public void setAvgDrivingScore(float avgDrivingScore) {
+        this.avgDrivingScore = avgDrivingScore;
+    }
+
+    public LocalDateTime getCreatedAt() {
+        return createdAt;
+    }
+
+    public void setCreatedAt(LocalDateTime createdAt) {
+        this.createdAt = createdAt;
+    }
 }
